force-app/main/default/objects/Provision__c/fields/Free_Service_Messaging__c.field-meta.xml
<CustomField>
    <fullName>Free_Service_Messaging__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Free Service / Messaging</label>
    <type>TextArea</type>
</CustomField>