force-app/main/default/objects/Provision__c/fields/Free_Technical_Services__c.field-meta.xml
<CustomField>
    <fullName>Free_Technical_Services__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Free Technical Services</label>
    <type>TextArea</type>
</CustomField>