force-app/main/default/objects/Provision__c/fields/Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Date__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Funding Date</label>
    <type>Date</type>
</CustomField>