force-app/main/default/objects/Provision__c/fields/Future_Products_Obsolescence_Clause__c.field-meta.xml
<CustomField>
    <fullName>Future_Products_Obsolescence_Clause__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Future Products/Obsolescence Clause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>