force-app/main/default/objects/Provision__c/fields/Gov_t_Automated_Invoicing_Required__c.field-meta.xml
<CustomField>
    <fullName>Gov_t_Automated_Invoicing_Required__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Gov&apos;t Automated Invoicing Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>