force-app/main/default/objects/Provision__c/fields/Government_Agency__c.field-meta.xml
<CustomField>
    <fullName>Government_Agency__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Government Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State/Local</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>