force-app/main/default/objects/Provision__c/fields/Hardware_Platform__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Platform__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Hardware Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Critical Event Video</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>OmniExpress</fullName>
            </value>
            <value>
                <fullName>OmniTRACS</fullName>
            </value>
            <value>
                <fullName>Service Fleet Manager</fullName>
            </value>
            <value>
                <fullName>Trailer Tracks</fullName>
            </value>
            <value>
                <fullName>TruckMAIL</fullName>
            </value>
            <value>
                <fullName>TT150</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>