force-app/main/default/objects/Provision__c/fields/HOS_Units__c.field-meta.xml
<CustomField>
    <fullName>HOS_Units__c</fullName>
    <label>HOS Units</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>