force-app/main/default/objects/Provision__c/fields/If_cause_is_Other_explain__c.field-meta.xml
<CustomField>
    <fullName>If_cause_is_Other_explain__c</fullName>
    <description>Created for Contract Management.</description>
    <label>If cause is Other, explain</label>
    <type>TextArea</type>
</CustomField>