force-app/main/default/objects/Provision__c/fields/If_cause_is_Restructure_or_Successor__c.field-meta.xml
<CustomField>
    <fullName>If_cause_is_Restructure_or_Successor__c</fullName>
    <description>Created for Contract Management.</description>
    <label>If cause is Restructure or Successor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assignment rights apply to all parties</fullName>
            </value>
            <value>
                <fullName>Assignment rights apply to other party</fullName>
            </value>
            <value>
                <fullName>Assignment rights apply to Omni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>