force-app/main/default/objects/Provision__c/fields/If_No_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>If_No_Exchange_Rate__c</fullName>
    <defaultValue>1.000000000</defaultValue>
    <label>Exchange Rate (1 if USD)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>