force-app/main/default/objects/Provision__c/fields/If_Other_Define__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Define__c</fullName>
    <description>Created for Contract Management.</description>
    <label>If Other, Define</label>
    <length>255</length>
    <type>Text</type>
</CustomField>