force-app/main/default/objects/Provision__c/fields/If_with_exception_cause__c.field-meta.xml
<CustomField>
    <fullName>If_with_exception_cause__c</fullName>
    <description>Created for Contract Management.</description>
    <label>If with exception, cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Restructure or Successor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>