force-app/main/default/objects/Provision__c/fields/In_Service__c.field-meta.xml
<CustomField>
    <fullName>In_Service__c</fullName>
    <description>Created for Contract Management.</description>
    <label>In-Service %</label>
    <length>40</length>
    <type>Text</type>
</CustomField>