force-app/main/default/objects/Provision__c/fields/In_Service_NRF__c.field-meta.xml
<CustomField>
    <fullName>In_Service_NRF__c</fullName>
    <description>Created for Contract Management.</description>
    <label>In-Service NRF</label>
    <length>40</length>
    <type>Text</type>
</CustomField>