force-app/main/default/objects/Provision__c/fields/Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Indemnity__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Indemnity</label>
    <type>TextArea</type>
</CustomField>