force-app/main/default/objects/Provision__c/fields/Indemnity_Details__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Indemnity Details</label>
    <type>TextArea</type>
</CustomField>