force-app/main/default/objects/Provision__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Insurance</label>
    <type>TextArea</type>
</CustomField>