force-app/main/default/objects/Provision__c/fields/Insurance_Details__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Insurance Details</label>
    <type>TextArea</type>
</CustomField>