force-app/main/default/objects/Provision__c/fields/Last_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Approved_By__c</fullName>
    <label>Last Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>