force-app/main/default/objects/Provision__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <inlineHelpText>Choose the type of license this Contract is for - if it&apos;s an additional license, choose what the new license will be (not &quot;Add-On&quot;).</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional Edition</fullName>
            </value>
            <value>
                <fullName>Professional Edition Plus</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>