force-app/main/default/objects/Provision__c/fields/Limitation_of_Funds_Clause__c.field-meta.xml
<CustomField>
    <fullName>Limitation_of_Funds_Clause__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Limitation of Funds Clause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>