force-app/main/default/objects/Provision__c/fields/Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Amount__c</fullName>
    <label>Maintenance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>