force-app/main/default/objects/Provision__c/fields/Maintenance_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Fee_Type__c</fullName>
    <label>Maintenance Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Fees</fullName>
            </value>
            <value>
                <fullName>Additional Fees</fullName>
            </value>
            <value>
                <fullName>Replaces Current Fees</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>