force-app/main/default/objects/Provision__c/fields/Map_Coverage_Area__c.field-meta.xml
<CustomField>
    <fullName>Map_Coverage_Area__c</fullName>
    <label>Map Coverage Area</label>
    <length>55</length>
    <type>Text</type>
</CustomField>