force-app/main/default/objects/Provision__c/fields/Map_Royalties_USD_if_paid_by_UPSLT__c.field-meta.xml
<CustomField>
    <fullName>Map_Royalties_USD_if_paid_by_UPSLT__c</fullName>
    <inlineHelpText>This field is only required if the royalties are paid by Roadnet to map vendor</inlineHelpText>
    <label>Map Royalties USD (if paid by Roadnet)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>