force-app/main/default/objects/Provision__c/fields/Map_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Map_Vendor__c</fullName>
    <label>Map Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digibase (TeleAtlas)</fullName>
            </value>
            <value>
                <fullName>Dmapas</fullName>
            </value>
            <value>
                <fullName>ESRI Thailand</fullName>
            </value>
            <value>
                <fullName>GDT Brazil</fullName>
            </value>
            <value>
                <fullName>Geobis</fullName>
            </value>
            <value>
                <fullName>Geocenter Consulting</fullName>
            </value>
            <value>
                <fullName>GeoMapas</fullName>
            </value>
            <value>
                <fullName>Geotarget</fullName>
            </value>
            <value>
                <fullName>Geovision</fullName>
            </value>
            <value>
                <fullName>GNX Technologies Pte Ltd</fullName>
            </value>
            <value>
                <fullName>Imagem</fullName>
            </value>
            <value>
                <fullName>Lead Dog</fullName>
            </value>
            <value>
                <fullName>Mapah</fullName>
            </value>
            <value>
                <fullName>MapaServ</fullName>
            </value>
            <value>
                <fullName>MapData</fullName>
            </value>
            <value>
                <fullName>Map Data Sciences</fullName>
            </value>
            <value>
                <fullName>MapInfo</fullName>
            </value>
            <value>
                <fullName>MapIt</fullName>
            </value>
            <value>
                <fullName>MapKing International Limited</fullName>
            </value>
            <value>
                <fullName>Mapping Solutions Company Ltd.</fullName>
            </value>
            <value>
                <fullName>Mardis Research</fullName>
            </value>
            <value>
                <fullName>MultiSpectral</fullName>
            </value>
            <value>
                <fullName>NAV2</fullName>
            </value>
            <value>
                <fullName>Naviar</fullName>
            </value>
            <value>
                <fullName>Here - NAVTEQ</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PitneyBowes MapInfo</fullName>
            </value>
            <value>
                <fullName>Sensis</fullName>
            </value>
            <value>
                <fullName>TeleAtlas</fullName>
            </value>
            <value>
                <fullName>TeleNavis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>