force-app/main/default/objects/Provision__c/fields/Maps_sold_by__c.field-meta.xml
<CustomField>
    <fullName>Maps_sold_by__c</fullName>
    <inlineHelpText>This field will indicate who is selling the map databases and who is recogniziting the revenue allocation shown.</inlineHelpText>
    <label>Maps Sold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VAR (all revenue to VAR)</fullName>
            </value>
            <value>
                <fullName>VAR (all revenue to UPSLT)</fullName>
            </value>
            <value>
                <fullName>VAR (50% revenue to UPSLT)</fullName>
            </value>
            <value>
                <fullName>UPSLT (all revenue to UPSLT)</fullName>
            </value>
            <value>
                <fullName>UPSLT (all revenue to VAR)</fullName>
            </value>
            <value>
                <fullName>UPSLT (50% revenue to VAR)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>