force-app/main/default/objects/Provision__c/fields/Master_Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_Version__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Master Contract Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>