force-app/main/default/objects/Provision__c/fields/MobileCast_Fee__c.field-meta.xml
<CustomField>
    <fullName>MobileCast_Fee__c</fullName>
    <label>MobileCast Fee (Schedule 3)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>