force-app/main/default/objects/Provision__c/fields/MobileCast_Units__c.field-meta.xml
<CustomField>
    <fullName>MobileCast_Units__c</fullName>
    <label>MobileCast Units</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>