force-app/main/default/objects/Provision__c/fields/Mounts_Discount__c.field-meta.xml
<CustomField>
    <fullName>Mounts_Discount__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Mounts Discount</label>
    <length>40</length>
    <type>Text</type>
</CustomField>