force-app/main/default/objects/Provision__c/fields/Non_Standard_Cust_Indemnification_Detai__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Cust_Indemnification_Detai__c</fullName>
    <description>Created for Contract Management.</description>
    <inlineHelpText>for Counterparty</inlineHelpText>
    <label>Non-Standard CP Indemnification Detail</label>
    <type>TextArea</type>
</CustomField>