force-app/main/default/objects/Provision__c/fields/Non_Standard_Cust_Limitation_of_Liabili__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Cust_Limitation_of_Liabili__c</fullName>
    <description>Created for Contract Management.</description>
    <inlineHelpText>for Counterparty</inlineHelpText>
    <label>Non-Std CP Limitation of Liability</label>
    <type>TextArea</type>
</CustomField>