force-app/main/default/objects/Provision__c/fields/Non_Standard_Invoicing_Pmt_or_Tax_Term__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Invoicing_Pmt_or_Tax_Term__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Standard Invoicing, Pmt, or Tax Term</label>
    <type>TextArea</type>
</CustomField>