force-app/main/default/objects/Provision__c/fields/Non_Standard_Omni_Indemnification_Detail__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Omni_Indemnification_Detail__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Standard Omni Indemnification Detail</label>
    <type>TextArea</type>
</CustomField>