force-app/main/default/objects/Provision__c/fields/Non_Standard_Omni_Limitation_of_Liabilit__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Omni_Limitation_of_Liabilit__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Std Omni Limitation of Liability</label>
    <type>TextArea</type>
</CustomField>