force-app/main/default/objects/Provision__c/fields/Non_Standard_Payment_Terms_Details__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Payment_Terms_Details__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Standard Payment Terms Details</label>
    <type>TextArea</type>
</CustomField>