force-app/main/default/objects/Provision__c/fields/Non_Standard_Software_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Software_Terms__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Standard Software Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>