force-app/main/default/objects/Provision__c/fields/Non_Standard_Term_Termination_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Term_Termination_Terms__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Standard Term &amp; Termination Terms</label>
    <type>TextArea</type>
</CustomField>