force-app/main/default/objects/Provision__c/fields/Non_Standard_Termination_Fees_or_Terms__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Termination_Fees_or_Terms__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Standard Termination Fees or Terms</label>
    <type>TextArea</type>
</CustomField>