force-app/main/default/objects/Provision__c/fields/Non_Std_Pmt_Terms_OLD__c.field-meta.xml
<CustomField>
    <fullName>Non_Std_Pmt_Terms_OLD__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Non-Std Pmt Terms - OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>