force-app/main/default/objects/Provision__c/fields/Number_of_Licensed_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licensed_Sites__c</fullName>
    <label>Number of Licensed Sites (DCs)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>