force-app/main/default/objects/Provision__c/fields/Number_Of_RNT_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_RNT_Users__c</fullName>
    <label>Number Of RNT Users</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>