force-app/main/default/objects/Provision__c/fields/Number_of_Sales_Reps_T_Planner__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sales_Reps_T_Planner__c</fullName>
    <label>Number of Sales Reps (TP Only)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>