force-app/main/default/objects/Provision__c/fields/Number_of_Support_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Support_Recipients__c</fullName>
    <label>Number of Support Recipients</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>