force-app/main/default/objects/Provision__c/fields/of_UPSLT_Training_Days_Quoted__c.field-meta.xml
<CustomField>
    <fullName>of_UPSLT_Training_Days_Quoted__c</fullName>
    <label>Number of RTI Training Days Quoted</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>