force-app/main/default/objects/Provision__c/fields/Omni_Assignability_Rights__c.field-meta.xml
<CustomField>
    <fullName>Omni_Assignability_Rights__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Omni Assignability Rights</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assign rights &amp; obligations in OMNI discretion</fullName>
            </value>
            <value>
                <fullName>Assign rights &amp; obligations with Customer consent</fullName>
            </value>
            <value>
                <fullName>Assign rights in OMNI discretion</fullName>
            </value>
            <value>
                <fullName>Assign rights with customer consent</fullName>
            </value>
            <value>
                <fullName>Both parties&apos; written consent</fullName>
            </value>
            <value>
                <fullName>No assignment of rights or obligations</fullName>
            </value>
            <value>
                <fullName>OMNI&apos;s written consent</fullName>
                <default>true</default>
                <label>OMNI&apos;s written consent</label>
            </value>
            <value>
                <fullName>Other party&apos;s written consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>