force-app/main/default/objects/Provision__c/fields/Omni_Indemnification__c.field-meta.xml
<CustomField>
    <fullName>Omni_Indemnification__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Omni Indemnification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>