force-app/main/default/objects/Provision__c/fields/OMNI_ok_to_assign_w_o_consent_restructu__c.field-meta.xml
<CustomField>
    <fullName>OMNI_ok_to_assign_w_o_consent_restructu__c</fullName>
    <description>Created for Contract Management.</description>
    <label>OMNI assign w/o consent (restructure)?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>