force-app/main/default/objects/Provision__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <defaultValue>&quot;Deposit Pending&quot;</defaultValue>
    <label>Order Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>