force-app/main/default/objects/Provision__c/fields/Other_Hardware_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Other_Hardware_Discounts__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Other Hardware Discounts</label>
    <length>40</length>
    <type>Text</type>
</CustomField>