force-app/main/default/objects/Provision__c/fields/Other_Neg_Terms_OLD__c.field-meta.xml
<CustomField>
    <fullName>Other_Neg_Terms_OLD__c</fullName>
    <description>Created for Contract Management.</description>
    <label>Other Neg Terms - OLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>